--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -1,3 +1,11 @@
+button {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  cursor: default;
+  -webkit-tap-highlight-color: transparent; /*deprecated*/
+}
+
 .button {
   flex: 1;
   border: none;
