--- a/src/Components/modal/Modal.css
+++ b/src/Components/modal/Modal.css
@@ -7,9 +7,11 @@
   background: rgba(0, 0, 0, 0.8);
   z-index: 9999;
   visibility: hidden;
+  opacity: 0;
 }
 .--open {
   visibility: visible;
+  opacity: 1;
 }
 .modal-content {
   width: 200px;
