--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -28,12 +28,12 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   padding: 1rem;
   border-radius: 50%;
-  cursor: pointer;
+  cursor: default;
   transition: 0.3s;
 }
 
 .card-btn:hover {
-  transform: scale(1.5) rotate(120deg);
+  transform: scale(1.5);
 }
 .card-btn:active {
   background-color: red;
