--- a/src/Components/preview/index.css
+++ b/src/Components/preview/index.css
@@ -13,7 +13,10 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 } */
 #canvas-preview {
-  background: red;
   height: 300px;
   width: 250px;
+  min-height: 300px;
+  min-width: 250px;
+  max-height: 300px;
+  max-width: 250px;
 }
