--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -58,13 +58,24 @@
   background: var(--MAIN);
 }
 
+.main-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+}
+.grow {
+  flex-grow: 1;
+  max-width: 80vw;
+  max-height: 100vh;
+  position: relative;
+  overflow: auto;
+}
 .canvas-wrapper {
   position: relative;
   overflow: auto;
-  max-width: 100vw;
   min-height: 90vh;
   max-height: 90vh;
-  padding: 2rem;
 }
 
 #canvas {
