done with many changes

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -77,6 +77,24 @@
   min-height: 90vh;
   max-height: 90vh;
 }
+.canvas-wrapper::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+  max-width: 10px !important;
+}
+
+.canvas-wrapper::-webkit-scrollbar {
+  max-width: 10px !important;
+  background-color: #f5f5f5;
+}
+
+.canvas-wrapper::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+  max-width: 10px !important;
+}
 
 #canvas {
   min-width: 0px;
