--- a/src/Components/preview/index.css
+++ b/src/Components/preview/index.css
@@ -1,17 +1,3 @@
-/* .ln {
-  background: linear-gradient(
-    235.58deg,
-    #6b0186 20.75%,
-    rgba(217, 217, 217, 0) 113.53%
-  );
-  //card
-  background: linear-gradient(
-    101.96deg,
-    #b35cbb 3.46%,
-    rgba(255, 255, 255, 0) 84.29%
-  );
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-} */
 #canvas-preview {
   height: 300px;
   width: 250px;
@@ -19,4 +5,34 @@
   min-width: 250px;
   max-height: 300px;
   max-width: 250px;
+}
+
+.preview-base {
+  position: relative;
+  padding: 10px;
+}
+.preview-card {
+  overflow: hidden;
+  display: flex;
+  border-bottom: 1px solid lightgray;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+.preview-canvas-base {
+  position: relative;
+  height: 150px;
+  width: 120px;
+}
+
+.preview-controller-base {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 5px;
+  justify-content: flex-end;
+}
+.flex-1 {
+  flex: 1;
+  margin: 1px;
 }
