--- a/src/Components/sidebar/sidebar.css
+++ b/src/Components/sidebar/sidebar.css
@@ -1,4 +1,4 @@
-.sidebar {
+.sidebar-base {
   min-width: 300px;
   width: 20vw;
   height: 100vh;
@@ -7,6 +7,31 @@
   top: 0;
   display: flex;
   flex-direction: column;
+  transition: 0.3s;
+  animation: display 1s ease;
+}
+.sidebar {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.--close {
+  min-width: 0px;
+  width: 0px;
+  max-width: 0px;
+  animation: fade 0.5s ease;
+}
+
+@keyframes fade {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(300px);
+    opacity: 0;
+  }
 }
 .sidebar-heading {
   display: flex;
