--- a/src/Components/card/preview.css
+++ b/src/Components/card/preview.css
@@ -1,28 +1,31 @@
-#canvas-preview {
-  height: 300px;
-  width: 250px;
-  min-height: 300px;
-  min-width: 250px;
-  max-height: 300px;
-  max-width: 250px;
-}
-
 .preview-base {
   position: relative;
   padding: 10px;
 }
+#preview-canvas {
+}
 .preview-card {
   overflow: hidden;
   display: flex;
+  min-height: 150px;
+  position: relative;
   border-bottom: 1px solid lightgray;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
 }
+.preview-loading-base {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .preview-canvas-base {
   position: relative;
-  height: 150px;
-  width: 120px;
+  display: flex;
+  align-items: flex-end;
+  padding: 5px 0;
 }
 
 .preview-controller-base {
