--- a/src/Components/card/preview.css
+++ b/src/Components/card/preview.css
@@ -3,6 +3,7 @@
   padding: 10px;
 }
 #preview-canvas {
+  background: rgb(216, 216, 216);
 }
 .preview-card {
   overflow: hidden;
@@ -17,6 +18,11 @@
 .preview-loading-base {
   flex: 1;
   display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  z-index: 999;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -39,4 +45,17 @@
 .flex-1 {
   flex: 1;
   margin: 1px;
+}
+#fpsRef {
+  padding: 2px 5px;
+  outline: none;
+  border: 1px solid lightgray;
+  width: 80px;
+}
+.fps-input-base {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1;
+  padding: 0 10px;
 }
