--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -1,95 +1,3 @@
-button {
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  cursor: default;
-  -webkit-tap-highlight-color: transparent; /*deprecated*/
-}
-
-.button {
-  flex: 1;
-  border: none;
-  width: 100%;
-  padding: 10px 0;
-  font-size: 1rem;
-  border-radius: 0.5rem;
-  transition: 0.5s;
-}
-.-xs {
-  width: 1.5rem;
-  height: 1.5rem;
-  min-width: 1.5rem;
-  min-height: 1.5rem;
-  max-width: 1.5rem;
-  max-height: 1.5rem;
-  font-size: 1rem;
-}
-.-sm {
-  width: 2rem;
-  height: 2rem;
-  min-width: 2rem;
-  min-height: 2rem;
-  font-size: 1.2rem;
-}
-.-md {
-  width: 2.5rem;
-  height: 2.5rem;
-  min-width: 2.5rem;
-  min-height: 2.5rem;
-  font-size: 1.1rem;
-}
-
 .close-button {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-}
-
-.default {
-  background: rgba(0, 0, 0, 0.3);
-}
-
-.default:hover {
-  background: rgba(0, 0, 0, 0.4);
-}
-
-.primary {
-  background: var(--PRIMARY);
-  color: #fff;
-}
-.primary:hover {
-  background: var(--PRIMARY-DARK);
-}
-
-.secondary {
-  background: var(--SECONDARY);
-  color: #fff;
-}
-.secondary:hover {
-  background: var(--SECONDARY-DARK);
-}
-.error {
-  background: var(--ERROR);
-  color: #fff;
-}
-.error:hover {
-  background: var(--ERROR-DARK);
-}
-
-.btn-preview {
-  height: 40px;
-  width: 40px;
-  border: none;
-  outline: none;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: 0.5s;
+  @apply w-8 h-8 rounded-none outline-none border-none cursor-pointer select-none;
 }
