--- a/src/Components/logo/Logo.css
+++ b/src/Components/logo/Logo.css
@@ -1,50 +1,14 @@
 .logo-base {
-  height: 3rem;
-  width: 3rem;
-  position: relative;
-  display: flex;
-  align-items: center;
-  background: var(--LOGO);
-  padding: 10px;
-  border-radius: 50%;
+  @apply h-10 w-10 relative flex items-center p-2 rounded-full bg-white select-none;
 }
-.logo-base:hover {
-  color: var(--TEXT-LIGHT);
-  box-shadow: 0px 8px 16px 0px var(--PRIMARY-LIGHT);
-}
-
 .logo {
-  width: 100%;
-  height: 100%;
-  min-width: 100%;
-  min-height: 100%;
+  @apply w-full h-full min-w-full min-h-full;
 }
 .logo-base-l {
-  position: relative;
-  display: flex;
-  align-items: center;
-  height: 7rem;
-  width: 7rem;
-  background: var(--LOGO);
-  padding: 1rem;
-  border-radius: 50%;
-  min-height: 80px;
-  min-width: 80px;
-}
-
-@media screen and (max-width: 718px) {
-  .logo-base-l {
-    height: 5rem;
-    width: 5rem;
-  }
-}
-@media screen and (max-width: 600px) {
-  .logo-base {
-    height: 2.5rem;
-    width: 2.5rem;
-  }
-  .logo-base-l {
-    height: 7rem;
-    width: 7rem;
-  }
+  @apply relative flex items-center 
+  h-[7rem] w-[7rem]
+  sm:h-[5rem] sm:w-[5rem]
+  md:h-[7rem] md:w-[7rem] 
+  bg-[#1b1b1b] p-4 rounded-full 
+  min-h-[80px] min-w-[80px];
 }
