--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -1,12 +1,5 @@
 .navbar {
-  height: 10vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  background: var(--CARD);
-  position: sticky;
-  top: 0;
-  z-index: 99;
+  @apply h-[7vh] w-[100%] flex items-center sticky top-0 z-50 bg-navbarBase;
 }
 .nav-title {
   margin-left: 3rem;
@@ -18,50 +11,30 @@
   margin-right: 10px;
   font-size: 1.5rem;
 }
-.nav-title h4 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.3rem;
-  color: var(--TEXT-DARK);
+.nav-flex-grow {
+  @apply flex-grow flex items-center flex-row justify-between;
 }
-.nav-title h4 em {
-  color: var(--WARNING);
-  border: 1px solid var(--WARNING);
-  padding: 0.5rem 1rem;
-  border-radius: 50%;
-  font-size: 1.7rem;
+.nav-left-section {
+  @apply flex items-center ml-20;
 }
-.flex-grow {
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-
 .nav-button-base {
   position: inherit;
-  padding: 0.5rem 1rem;
   display: flex;
+  @apply flex items-center justify-end;
 }
 .nav-button {
-  margin: 0 0.4rem;
-  height: 3rem;
-  z-index: 10;
-  width: 3rem;
-  border-radius: 50%;
-  border: none;
-  transition: 0.5s ease-in-out;
-  background: var(--PAPER);
+  @apply h-[7vh] z-10 w-10 border-none duration-500 text-white hover:bg-black;
 }
-.nav-button:hover {
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+.reload-btn {
+  @apply bg-blue-700 hover:bg-blue-600 duration-500
+  mx-2 my-2 px-3 py-2 text-white rounded-lg text-sm;
+}
+.clear-btn {
+  @apply bg-red-700 hover:bg-red-600 duration-500
+  mx-2 my-2 px-3 py-2 text-white rounded-lg text-sm;
 }
 .centered {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @apply flex items-center justify-center;
 }
 
 .rotated-45deg {
