--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,43 @@
+@import url("./Button.css");
+@import url("../Components/navbar/navbar.css");
+@import url("../Components/logo/Logo.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main-container {
+  @apply w-[100vw] h-[100vh] flex flex-row max-w-[100vw] max-h-[100vh] overflow-hidden;
+}
+
+.container-grow {
+  @apply grow max-w-[100vw] max-h-[100vh] relative overflow-auto;
+}
+
+.canvas-wrapper {
+  @apply relative overflow-auto min-h-[93vh] max-h-[93vh] bg-base;
+}
+
+.canvas-wrapper::-webkit-scrollbar-track {
+  @apply bg-[#f5f5f5] rounded-lg;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.canvas-wrapper::-webkit-scrollbar {
+  @apply max-w-[10px] bg-[#f5f5f5] max-h-[10px];
+}
+
+.canvas-wrapper::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  @apply bg-[#555] rounded-lg;
+}
+
+#canvas {
+  @apply min-w-0 min-h-0 
+  block;
+}
+
+#download,
+#upload {
+  @apply hidden;
+}
