--- a/src/Components/card/preview.css
+++ b/src/Components/card/preview.css
@@ -1,40 +1,19 @@
 .preview-base {
-  position: relative;
-  padding: 10px;
-}
-#preview-canvas {
-  background: rgb(216, 216, 216);
+  @apply relative;
 }
 .preview-card {
-  overflow: hidden;
-  display: flex;
-  min-height: 150px;
-  position: relative;
-  border-bottom: 1px solid lightgray;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
+  @apply overflow-hidden flex 
+  min-h-[150px] relative select-none mt-2;
 }
 .preview-loading-base {
-  flex: 1;
-  display: flex;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #fff;
-  z-index: 999;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @apply flex-1 
+  flex flex-col items-center justify-center
+  absolute w-[100%] h-[100%]
+  bg-white z-[999];
 }
 .preview-canvas-base {
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-  padding: 5px 0;
-  flex: 1;
+  @apply relative flex items-end px-0 py-1 flex-1;
 }
-
 .preview-controller-base {
   display: flex;
   flex: 1;
