--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,8 @@
 @import url("./Button.css");
 @import url("../Components/navbar/navbar.css");
 @import url("../Components/logo/Logo.css");
+@import url("../Components/sidebar/sidebar.css");
+@import url("../Components/card/preview.css");
 
 @tailwind base;
 @tailwind components;
@@ -20,6 +22,7 @@
 
 .canvas-wrapper::-webkit-scrollbar-track {
   @apply bg-[#f5f5f5] rounded-lg;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
@@ -28,6 +31,7 @@
 }
 
 .canvas-wrapper::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   @apply bg-[#555] rounded-lg;
 }
