--- a/src/Components/card/preview.css
+++ b/src/Components/card/preview.css
@@ -3,7 +3,7 @@
 }
 .preview-card {
   @apply overflow-hidden flex 
-  min-h-[150px] relative select-none mt-2;
+  min-h-[150px] relative select-none mt-2 border-b-[1px] border-b-[lightgray];
 }
 .preview-loading-base {
   @apply flex-1 
@@ -12,18 +12,19 @@
   bg-white z-[999];
 }
 .preview-canvas-base {
-  @apply relative flex items-end px-0 py-1 flex-1;
+  @apply relative flex items-end p-2 pl-5 border-r-[1px] border-r-[lightgray];
+}
+.preview-canvas {
+  @apply flex-1 h-[100%] flex items-end;
 }
 .preview-controller-base {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  padding: 5px;
-  justify-content: flex-end;
+  @apply flex flex-1 justify-end flex-col p-2  pr-5;
 }
-.flex-1 {
-  flex: 1;
-  margin: 1px;
+.preview-controller-label {
+  @apply relative flex flex-col w-full justify-start;
+}
+.inline-group {
+  @apply w-full flex flex-row items-start;
 }
 #fpsRef {
   padding: 2px 5px;
@@ -37,4 +38,9 @@
   justify-content: space-between;
   flex: 1;
   padding: 0 10px;
+}
+.dropdown-c-content-base {
+  @apply relative 
+  bg-primaryBlue
+  w-[250px] p-2;
 }
