--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -20,7 +20,7 @@
   width: 100%;
   align-items: center;
   --tw-bg-opacity: 1;
-  background-color: rgb(24 24 24 / var(--tw-bg-opacity));
+  background-color: rgb(44 44 44 / var(--tw-bg-opacity));
 }
 
 .nav-title {
@@ -28,11 +28,10 @@
 }
 
 .span {
+  margin-right: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 10px;
-  font-size: 1.5rem;
 }
 
 .nav-flex-grow {
@@ -47,6 +46,7 @@
   margin-left: 5rem;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .nav-button-base {
@@ -259,8 +259,6 @@
   line-height: 1.25rem;
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-  flex: 1;
-  margin: 1px;
 }
 
 .sidebar-btn-active {
@@ -276,8 +274,6 @@
   overflow-y: auto;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  flex: 1;
-  margin: 1px;
 }
 
 .sidebar-content::-webkit-scrollbar-track {
@@ -318,8 +314,6 @@
   flex: 1 1 0%;
   align-items: center;
   justify-content: space-between;
-  flex: 1;
-  margin: 1px;
 }
 
 .text-title {
@@ -389,13 +383,7 @@
 }
 
 .sidebar-anim-preview-base {
-  border-bottom-width: 1px;
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(211 211 211 / var(--tw-border-opacity));
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  position: relative;
 }
 
 .form-base {
@@ -415,6 +403,9 @@
      -moz-user-select: none;
           user-select: none;
   overflow: hidden;
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(211 211 211 / var(--tw-border-opacity));
 }
 
 .preview-loading-base {
@@ -429,34 +420,48 @@
   justify-content: center;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  flex: 1;
-  margin: 1px;
 }
 
 .preview-canvas-base {
   position: relative;
   display: flex;
+  align-items: flex-end;
+  border-right-width: 1px;
+  --tw-border-opacity: 1;
+  border-right-color: rgb(211 211 211 / var(--tw-border-opacity));
+  padding: 0.5rem;
+  padding-left: 1.25rem;
+}
+
+.preview-canvas {
+  display: flex;
+  height: 100%;
   flex: 1 1 0%;
   align-items: flex-end;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  flex: 1;
-  margin: 1px;
 }
 
 .preview-controller-base {
   display: flex;
-  flex: 1;
+  flex: 1 1 0%;
   flex-direction: column;
-  padding: 5px;
   justify-content: flex-end;
+  padding: 0.5rem;
+  padding-right: 1.25rem;
 }
 
-.flex-1 {
-  flex: 1;
-  margin: 1px;
+.preview-controller-label {
+  position: relative;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.inline-group {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
 #fpsRef {
@@ -472,6 +477,66 @@
   justify-content: space-between;
   flex: 1;
   padding: 0 10px;
+}
+
+.dropdown-c-content-base {
+  position: relative;
+  width: 250px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 28 217 / var(--tw-bg-opacity));
+  padding: 0.5rem;
+}
+
+.nav-menu-base {
+  position: relative;
+  display: inline-block;
+}
+
+.nav-menu {
+  position: absolute;
+  right: 0px;
+  z-index: 20;
+  margin-top: 0.6rem;
+  display: none;
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 28 217 / var(--tw-bg-opacity));
+}
+
+.nav-menu::before {
+  position: absolute;
+  right: 3px;
+  top: -5px;
+  height: 20px;
+  width: 20px;
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 28 217 / var(--tw-bg-opacity));
+}
+
+.--active {
+  display: block;
+}
+
+.nav-menu-content {
+  position: relative;
+  z-index: 10;
+  display: block;
+  min-height: 100px;
+  min-width: 200px;
+}
+
+.input-group-base {
+  display: flex;
+}
+
+.input-group-input {
+  max-width: 50px;
+  border-style: none;
+  padding-left: 0.25rem;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 /*
@@ -1014,12 +1079,16 @@ video {
   }
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
+.relative {
+  position: relative;
 }
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mr-1 {
@@ -1042,6 +1111,10 @@ video {
   flex: 1 1 0%;
 }
 
+.flex-grow {
+  flex-grow: 1;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1054,23 +1127,30 @@ video {
   flex-direction: column;
 }
 
+.items-center {
+  align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
 .border {
   border-width: 1px;
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
-.bg-\[\#c71f1f\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(199 31 31 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#450d0d\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(69 13 13 / var(--tw-bg-opacity));
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .main-container {
