--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -198,7 +198,7 @@
   position: sticky;
   top: 0px;
   display: flex;
-  height: 100vh;
+  height: 93vh;
   width: 20vw;
   min-width: 350px;
   flex-direction: column;
@@ -386,8 +386,10 @@
   position: relative;
 }
 
-.form-base {
-  display: flex;
+.border-on-hover:hover {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(211 211 211 / var(--tw-border-opacity));
 }
 
 .preview-base {
@@ -493,7 +495,7 @@
   position: absolute;
   right: 0px;
   z-index: 20;
-  margin-top: 0.6rem;
+  margin-top: 0.4rem;
   display: none;
   --tw-bg-opacity: 1;
   background-color: rgb(43 28 217 / var(--tw-bg-opacity));
@@ -501,10 +503,10 @@
 
 .nav-menu::before {
   position: absolute;
-  right: 3px;
+  right: 5px;
   top: -5px;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
   --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   content: var(--tw-content);
@@ -549,6 +551,140 @@
   padding-left: 0.25rem;
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.configuration-base {
+  display: flex;
+  flex-direction: column;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.outline-v {
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-top-color: rgb(211 211 211 / var(--tw-border-opacity));
+  border-bottom-color: rgb(211 211 211 / var(--tw-border-opacity));
+}
+
+.outline-b {
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(211 211 211 / var(--tw-border-opacity));
+}
+
+.note-base {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 28 217 / var(--tw-bg-opacity));
+  padding: 0.5rem;
+}
+
+.note-icon {
+  display: flex;
+  min-height: 20px;
+  min-width: 20px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.note-text {
+  margin-left: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.input-check {
+  height: 20px;
+  width: 20px;
+}
+
+.btn-export {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(31 41 55 / var(--tw-border-opacity));
+  padding: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.notification-base {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: 999;
+  margin: 1rem;
+  max-width: 300px;
+  border-radius: 10px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 1rem;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.notification {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.notification-icon {
+  margin-right: 0.5rem;
+  display: flex;
+  height: 2rem;
+  min-height: 2rem;
+  width: 2rem;
+  min-width: 2rem;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 9999px;
+}
+
+.notification p {
+  min-width: 8rem;
+}
+
+.--success {
+  border: 1px solid var(--SUCCESS);
+  color: var(--SUCCESS);
+}
+
+.--warning {
+  border: 1px solid var(--WARNING);
+  color: var(--WARNING);
+}
+
+.--error {
+  border: 1px solid var(--ERROR);
+  color: var(--ERROR);
+}
+
+@media screen and (max-width: 400px) {
+  .notification-base {
+    max-width: 400px;
+  }
 }
 
 /*
@@ -1095,8 +1231,17 @@ video {
   position: relative;
 }
 
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .mt-1 {
@@ -1117,6 +1262,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .flex-1 {
@@ -1170,6 +1319,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1181,22 +1335,26 @@ video {
   max-height: 100vh;
   width: 100vw;
   max-width: 100vw;
-  flex-direction: row;
+  flex-direction: column;
   overflow: hidden;
 }
 
 .container-grow {
   position: relative;
+  display: flex;
   max-height: 100vh;
   max-width: 100vw;
   flex-grow: 1;
-  overflow: auto;
+  flex-direction: row;
+  overflow: hidden;
 }
 
 .canvas-wrapper {
   position: relative;
   max-height: 93vh;
   min-height: 93vh;
+  max-width: 100vw;
+  flex-grow: 1;
   overflow: auto;
   --tw-bg-opacity: 1;
   background-color: rgb(219 219 219 / var(--tw-bg-opacity));
