--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,9 +21,17 @@
 }
 
 .canvas-wrapper {
-  @apply relative overflow-auto min-h-[93vh] flex-grow max-h-[93vh] bg-base max-w-[100vw];
+  @apply relative 
+  overflow-auto 
+  min-h-[93vh] 
+  flex-grow 
+  max-h-[93vh] 
+  bg-base 
+  max-w-[100vw] block;
 }
-
+#canvas-root {
+  @apply bg-red-500 absolute;
+}
 .canvas-wrapper::-webkit-scrollbar-track {
   @apply bg-[#f5f5f5] rounded-lg;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
