--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -1424,6 +1424,7 @@ video {
 
 .canvas-wrapper {
   position: relative;
+  display: block;
   max-height: 93vh;
   min-height: 93vh;
   max-width: 100vw;
@@ -1431,6 +1432,12 @@ video {
   overflow: auto;
   --tw-bg-opacity: 1;
   background-color: rgb(219 219 219 / var(--tw-bg-opacity));
+}
+
+#canvas-root {
+  position: absolute;
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .canvas-wrapper::-webkit-scrollbar-track {
